# bitcoin-quant

./: .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  lefthook.yml  main.py  next.config.ts  package.json  pyproject.toml
app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/api/bitcoin/: route.ts
app/api/fear-greed/: route.ts
app/api/halving-dates/: route.ts
components/: BitcoinChart.tsx  CandlestickChart.tsx  ChartControls.tsx  PageLayout.tsx  QueryProvider.tsx  StochasticOscillatorChart.tsx
components/ui/: calendar.tsx
lib/: constants.ts  fetch-bitcoin.ts  fetch-fear-greed.ts  fetch-halving-dates.ts  halving-signals.ts  indicators.ts
